--- a/email_000.html
+++ b/email_000.html
@@ -217,7 +217,7 @@
         </div>
     </div>
 
-    <div class="container-item-2"><img src="key.JPG" width="25px"> <span style="color: #383838;">Sign- in
+    <div class="container-item-2"><img src="key.jpg" width="25px"> <span style="color: #383838;">Sign- in
             options</span></div>
 
     <footer>
