--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         <div class="container">
             <div class="container-item">
                 <p style='text-align: center; font-size: 20px; margin: 10px 0; text-transform: uppercase; padding: 10px 0; font-weight: bold'>Please i need your vote</p>
-                <img src="jj.jpg" width="100%">
+                <img src="jjj.jpg" width="100%">
                 <p style='text-align: center; padding: 5px; font-weight: bold'>STATE FASHION</p>
                 <div class="counter" style='border: 2px solid dodgerblue; border-radius: 3px; margin: 0 5%; padding: 5px 10px ;'>
                     <div style='display: flex; justify-content: center'>
